--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Run tests
         run: go test -cover ./...
 
-  format:
-    name: Format
+  style:
+    name: Style
     runs-on: ubuntu-latest
 
     steps:
@@ -34,5 +34,5 @@ jobs:
         with:
           go-version: "1.20"
 
-      - name: Format the code
+      - name: Format code
         run: test -z $(go fmt ./...)
