--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,5 +34,11 @@ jobs:
         with:
           go-version: "1.20"
 
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
       - name: Format code
         run: test -z $(go fmt ./...)
+
+      - name: Staticcheck
+        run: staticcheck ./...
